--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@
 # ===========================================
 # For local development: mongodb://localhost:27017/hrms_db
 # For production: Use MongoDB Atlas connection string
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/hrms_db?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://hrms:satyam@satyam.gied0jg.mongodb.net/hrms_db?retryWrites=true&w=majority
 
 # ===========================================
 # AUTHENTICATION & SECURITY
