--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "^14.2.0",
     "next-auth": "^4.24.0",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.9.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
