--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,12 @@
-version: '3.8'
-
 services:
   hrms-app:
     build: .
     ports:
       - "3000:3000"
+    env_file:
+      - .env
     environment:
       - NODE_ENV=production
-      - MONGODB_URI=${MONGODB_URI}
-      - JWT_SECRET=${JWT_SECRET}
-      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
-      - NEXTAUTH_URL=${NEXTAUTH_URL}
     restart: unless-stopped
     networks:
       - hrms-network
