--- a/nginx.ssl.conf
+++ b/nginx.ssl.conf
@@ -31,9 +31,9 @@ http {
         listen 443 ssl http2;
         server_name _;
 
-        # SSL Configuration
-        ssl_certificate /etc/letsencrypt/live/199.59.27.50/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/199.59.27.50/privkey.pem;
+        # SSL Configuration - will be updated by setup script
+        ssl_certificate /etc/letsencrypt/live/DOMAIN_PLACEHOLDER/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/DOMAIN_PLACEHOLDER/privkey.pem;
         
         # SSL Security Settings
         ssl_protocols TLSv1.2 TLSv1.3;
