Fix SSL configuration for correct IP address 209.38.126.55
- Update .env file with correct IP address and HTTPS URLs
- Fix nginx.ssl.conf to use correct container name hrms-hrms-app-1:3000
- Update setup-ssl.sh and setup-ssl-simple.sh with correct default IP
- Create deploy-ssl-fix.sh for quick SSL deployment on server
- Fix upstream server configuration in nginx SSL config
- Update all SSL certificate generation to use correct IP address

Changes:
- NEXTAUTH_URL and NEXT_PUBLIC_APP_URL now use https://209.38.126.55
- Nginx upstream points to hrms-hrms-app-1:3000 (correct container name)
- SSL certificates generated for 209.38.126.55
- Added deployment script for easy server SSL setup

Ready for deployment on server 209.38.126.55

--- a/nginx.ssl.conf
+++ b/nginx.ssl.conf
@@ -4,7 +4,7 @@ events {
 
 http {
     upstream hrms_app {
-        server hrms-app:3000;
+        server hrms-hrms-app-1:3000;
     }
 
     # Rate limiting
