--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "HRMS - Human Resource Management System",
-  "short_name": "HRMS",
+  "name": "Tailo HRMS - Human Resource Management System",
+  "short_name": "Tailo",
   "description": "Complete HRMS solution for managing employees, attendance, payroll, and more",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#3b82f6",
+  "theme_color": "#5F9EA0",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en",
