--- a/public/manifest.json
+++ b/public/manifest.json
@@ -130,8 +130,14 @@
       "label": "HRMS Dashboard on Mobile"
     }
   ],
-  "prefer_related_applications": false,
-  "related_applications": [],
+  "prefer_related_applications": true,
+  "related_applications": [
+    {
+      "platform": "play",
+      "id": "sbs.zenova.twa",
+      "url": "https://play.google.com/store/apps/details?id=sbs.zenova.twa"
+    }
+  ],
   "edge_side_panel": {
     "preferred_width": 400
   }
