--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,12 +21,14 @@ services:
 
   nginx:
     image: nginx:alpine
+    container_name: hrms-nginx
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl:/etc/nginx/ssl
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /var/www/certbot:/var/www/certbot:ro
     depends_on:
       - hrms-app
     restart: unless-stopped
