--- a/nginx.conf
+++ b/nginx.conf
@@ -3,22 +3,65 @@ events {
 }
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     upstream hrms_app {
         server hrms-app:3000;
     }
 
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
     # Rate limiting
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
 
+    # HTTP server - redirect to HTTPS
     server {
         listen 80;
-        server_name _;
+        server_name zenova.sbs www.zenova.sbs;
+
+        # Let's Encrypt challenge
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Redirect all HTTP to HTTPS
+        location / {
+            return 301 https://$server_name$request_uri;
+        }
+    }
+
+    # HTTPS server with SSL certificate
+    server {
+        listen 443 ssl http2;
+        server_name zenova.sbs www.zenova.sbs;
+
+        # SSL Configuration with Let's Encrypt certificates
+        ssl_certificate /etc/letsencrypt/live/zenova.sbs/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/zenova.sbs/privkey.pem;
+
+        # Modern SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+
+        # SSL session settings
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_stapling on;
+        ssl_stapling_verify on;
+
+        # Client max body size for file uploads
+        client_max_body_size 10M;
 
         # Security headers
+        add_header Strict-Transport-Security "max-age=63072000" always;
         add_header X-Frame-Options DENY;
         add_header X-Content-Type-Options nosniff;
         add_header X-XSS-Protection "1; mode=block";
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin";
 
         # Gzip compression
         gzip on;
