--- a/nginx.ssl.conf
+++ b/nginx.ssl.conf
@@ -13,7 +13,7 @@ http {
     # HTTP server - redirect to HTTPS
     server {
         listen 80;
-        server_name _;
+        server_name zenova.sbs www.zenova.sbs;
 
         # Let's Encrypt challenge
         location /.well-known/acme-challenge/ {
@@ -22,18 +22,18 @@ http {
 
         # Redirect all other traffic to HTTPS
         location / {
-            return 301 https://$host$request_uri;
+            return 301 https://$server_name$request_uri;
         }
     }
 
     # HTTPS server
     server {
         listen 443 ssl http2;
-        server_name _;
+        server_name zenova.sbs www.zenova.sbs;
 
-        # SSL Configuration - will be updated by setup script
-        ssl_certificate /etc/letsencrypt/live/DOMAIN_PLACEHOLDER/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/DOMAIN_PLACEHOLDER/privkey.pem;
+        # SSL Configuration
+        ssl_certificate /etc/letsencrypt/live/zenova.sbs/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/zenova.sbs/privkey.pem;
         
         # SSL Security Settings
         ssl_protocols TLSv1.2 TLSv1.3;
