--- a/nginx.ssl.conf
+++ b/nginx.ssl.conf
@@ -1,4 +1,4 @@
-events {
+git add nginx.ssl.conf docker-compose.ssl.ymlgit commit -m "Server-specific SSL/nginx config"events {
     worker_connections 1024;
 }
 
