--- a/nginx.ssl.conf
+++ b/nginx.ssl.conf
@@ -1,8 +1,11 @@
-git add nginx.ssl.conf docker-compose.ssl.ymlgit commit -m "Server-specific SSL/nginx config"events {
+events {
     worker_connections 1024;
 }
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
     upstream hrms_app {
         server hrms-hrms-app-1:3000;
     }
