added chances for pwa

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "display_override": ["standalone", "fullscreen"],
   "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "theme_color": "#101827",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en",
